# bazel-sample

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json
javascript/nodejs_binary/: BUILD.bazel  dep.js  main.js
typescript/: tsconfig.json
typescript/lib/: BUILD.bazel  c.ts
typescript/sample1_non_import_dep/: BUILD.bazel  b.ts  t.spec.ts
typescript/test/: BUILD.bazel  init.ts
