load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

ts_library(
    name = "a",
    srcs = [":a.ts"],
    deps = [
        ":b",
        "//typescript/lib:c",
    ],
)

ts_library(
    name = "b",
    srcs = [":b.ts"],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = [":t.spec.ts"],
    deps = [
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test",
    bootstrap = ["my_wksp/typescript/test/init.js"],
    deps = [
        ":test_lib",
        "//typescript/test:test_init",
    ],
)
